# tome2

./: .gitignore  BUGS.txt  CMakeLists.txt  DEBUG.txt  README.md  README.txt  RELEASE.txt  angdos.cfg  building.txt  changes.old  changes.txt  tome.ini  vcpkg.json
.github/workflows/: build.yml
doc/: RELEASE.txt  changes.txt  credits.txt
lib/: .gitignore  CMakeLists.txt  module.lua
lib/apex/: scores.raw
lib/bone/: bone001.012  bone004.001  bone004.002  bone004.003  bone004.004  bone004.005  bone004.006  bone004.007  bone004.008  bone004.009  bone004.010
lib/core/: auto.lua  crpt_aux.lua  dungeon.lua  gods.lua  help.lua  init.lua  load2.lua  mimc_aux.lua  monsters.lua  objects.lua  player.lua  powers.lua  s_aux.lua  stores.lua  util.lua  xml.lua
lib/dngn/: dun1.14  dun10.0  dun11.22  dun17.15  dun18.0  dun22.5  dun24.0  dun3.28  dun5.14
lib/edit/: a_info.txt  ab_info.txt  al_info.txt  ba_info.txt  between.map  d_info.txt  dragons.map  e_info.txt  evil.map  f_info.txt  fireprof.map  haunted.map  k_info.txt  library.map  maeglin.map  misc.txt  nirnaeth.map  numenor.txt  ow_info.txt  p_info.txt  qrand1.map  qrand10.map  qrand11.map  qrand12.map  qrand14.map  qrand5.map  qrand6.map  qrand7.map  r_info.txt  ra_info.txt  re_info.txt  readme.txt  s_crypt.map  s_doom.map  s_factory.map  s_gates.map  s_info.txt  s_name.map  s_orc.map  s_ship.map  (+27 more)
lib/file/: book-0.txt  book-1.txt  book-10.txt  book-102.txt  book-103.txt  book-104.txt  book-105.txt  book-106.txt  book-107.txt  book-11.txt  book-12.txt  book-13.txt  book-14.txt  book-15.txt  book-16.txt  book-17.txt  book-18.txt  book-19.txt  book-2.txt  book-20.txt  book-200.txt  book-201.txt  book-203.txt  book-4.txt  book-6.txt  book-7.txt  book-8.txt  book-9.txt  bravado.txt  chainswd.txt  dam_huge.txt  dam_lots.txt  dam_med.txt  dam_none.txt  dam_xxx.txt  dead.txt  death.txt  elvish.txt  error.txt  mondeath.txt  (+15 more)
lib/help/: TANG.txt  advanced.hlp  attack.txt  automat.txt  birth.txt  bldg.txt  c_alchem.txt  c_archer.txt  c_axemas.txt  c_bard.txt  c_geoman.txt  c_mage.txt  c_mimic.txt  c_necro.txt  c_polear.txt  c_posses.txt  c_pr_drk.txt  c_pr_man.txt  c_priest.txt  c_ranger.txt  c_rogue.txt  c_runecr.txt  c_sorcer.txt  c_summon.txt  c_swordm.txt  c_symbia.txt  c_thaum.txt  c_unbel.txt  c_warper.txt  command.txt  debug.txt  def.aux  defines.txt  dungeon.txt  dunspoil.txt  essences.txt  experien.hlp  explore.hlp  fatespoi.txt  g_eru.txt  (+64 more)
lib/mods/: CMakeLists.txt  mods_aux.lua  modules.lua
lib/mods/theme/: CMakeLists.txt  changelog.txt  module.lua  permission.txt  theme.txt
lib/mods/theme/core/: building.lua  crpt_aux.lua  dungeon.lua  gen_idx.lua  init.lua  load.lua  load2.lua  mimc_aux.lua  quests.lua  s_aux.lua  util.lua
lib/mods/theme/dngn/: dun1.22  dun11.20  dun18.1  dun19.11  dun2.31  dun20.1  dun22.10  dun22.20  dun29.15  dun3.18  dun3.3  dun36.5  dun39.0  dun4.9  dun40.0  dun5.0  dun6.0
lib/mods/theme/edit/: a_info.txt  ab_info.txt  al_info.txt  ba_info.txt  between.map  d_info.txt  e_info.txt  f_info.txt  k_info.txt  misc.txt  nirnaeth.map  numenor.txt  ow_info.txt  p_info.txt  qrand1.map  qrand10.map  qrand7.map  r_info.txt  ra_info.txt  re_info.txt  readme.txt  s_bilbo.map  s_bridge.map  s_death.map  s_doom.map  (+54 more)
lib/pref/: 422color.prf  colors.prf  font-ibm.prf  font-mac.new  font-win.prf  font-xxx.prf  graf-dos.prf  graf-ibm.prf  graf-iso.prf  graf-mac.prf  graf-new.prf  graf-x11.prf  graf-xxx.prf  pref-iso.prf  pref-mac.prf  pref-sdl.prf  pref-win.prf  pref-x11.prf  pref.prf  trap-iso.prf  trap-xxx.prf  user.prf  xtra-new.prf
lib/scpt/: bounty.lua  corrupt.lua  drunk.lua  fireprof.lua  god.lua  gods.lua  help.lua  init.lua  intro.lua  joke.lua  library.lua  mimic.lua  mkeys.lua  player.lua  powers.lua  s_convey.lua  s_divin.lua  s_earth.lua  s_eru.lua  s_fire.lua  s_geom.lua  s_mana.lua  s_manwe.lua  s_melkor.lua  s_meta.lua  s_mind.lua  s_nature.lua  s_stick.lua  s_tempo.lua  s_tulkas.lua  s_udun.lua  s_water.lua  s_yavann.lua  spells.lua  stores.lua  test.lua
lib/xtra/: ang16.bdf  angband.fnt
lib/xtra/sound/: readme.txt
src/: .#dungeon.c.1.279.2.4  .gitignore  A-mac-h.pch  CMakeLists.txt  ENGLISH.txt  ability_type.hpp  ability_type_fwd.hpp  activation.hpp  alchemist_recipe.hpp  alchemist_recipe_fwd.hpp  alloc.hpp  alloc_entry.hpp  alloc_entry_fwd.hpp  angband.h  angband.rc  artifact_select_flag.hpp  artifact_select_flag_fwd.hpp  artifact_type.hpp  artifact_type_fwd.hpp  between_exit.hpp  birth.c  birth.cc  birth.h  birth.hpp  birther.hpp  bldg.c  bldg.cc  bldg.hpp  body.hpp  cave.c  cave.cc  cave.hpp  cave_type.hpp  cave_type_fwd.hpp  cli_comm.hpp  cli_comm_fwd.hpp  cmd1.c  cmd1.cc  cmd1.hpp  cmd2.c  (+631 more)
src/carbon/: Angband.icns  Carbon.r  Data.icns  Edit.icns  Image-DS_Store  Info.plist  Save.icns  getversion
src/include/tome/: enum_string_map.hpp  make_array.hpp  unique_handle.hpp
src/include/tome/pp/: global_constexpr.hpp
src/include/tome/squelch/: automatizer.hpp  automatizer_fwd.hpp  condition.hpp  condition_fwd.hpp  condition_metadata.hpp  condition_metadata_fwd.hpp  cursor.hpp  cursor_fwd.hpp  object_status.hpp  object_status_fwd.hpp  rule.hpp  rule_fwd.hpp  tree_printer.hpp  tree_printer_fwd.hpp
src/iso/: hackdef.h  readme.txt  simgraph.c  simgraph.h  simsys.h  simview.c  simview.h  walls4.h  walls9.h  world_adaptor.c  world_adaptor.h  world_view.c  world_view.h
src/lua/: .gitignore  CMakeLists.txt  array.lua  basic.lua  class.lua  code.lua  container.lua  declaration.lua  define.lua  doit.lua  enumerate.lua  feature.lua  function.lua  lapi.c  lapi.h  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.c  ldo.h  lfunc.c  lfunc.h  lgc.c  lgc.h  liolib.c  llex.c  llex.h  llimits.h  lmem.c  lmem.h  lobject.c  lobject.h  lopcodes.h  lparser.c  lparser.h  (+39 more)
src/squelch/: CMakeLists.txt  automatizer.cc  condition.cc  condition_metadata.cc  cursor.cc  jsoncons_helpers.hpp  object_status.cc  rule.cc  tree_printer.cc
tests/: flag_set.cc  get_level_device.cc  grid.cc  harness.cc  lua_get_level.cc
tests/arbitrary/: boost_optional.cc  boost_optional.hpp
(+227 files in other folders)
